--- a/Models/E2E/2021.12.04_YourTTS.md
+++ b/Models/E2E/2021.12.04_YourTTS.md
@@ -50,28 +50,27 @@ This is important to allow synthesis for speakers with a very different voice or
 
 Text-to-Speech (TTS) systems have significantly advanced in recent years with deep learning approaches, allowing successful applications such as speech-based virtual assistants.
 Most TTS systems were tailored from a single speaker's voice, but there is current interest in synthesizing voices for new speakers (not seen during training), employing only a few seconds of speech.
-This approach is called zero-shot multi-speaker TTS (ZS-TTS) as in \cite{jia2018transfer, cooper2020zero, choi2020attentron, casanova2021sc}.
+This approach is called zero-shot multi-speaker TTS (ZS-TTS) as in [^01], [^02], [^03], **SC-GlowTTS**[^04].
 
-ZS-TTS using deep learning was first proposed by % Arik et al (2018)~
-\cite{arik2018neural} which extended the DeepVoice~3 method~\cite{deepvoice3}.
-Meanwhile, Tacotron 2~\cite{tacotron2} was adapted using external speaker embeddings extracted from a trained speaker encoder using a generalized end-to-end loss (GE2E)~\cite{ge2e}, allowing for speech generation that resembles the target speaker~\cite{jia2018transfer}.
-Similarly, Tacotron 2 was used with a different speaker embeddings methods~\cite{cooper2020zero}, with LDE embeddings~\cite{cai2018exploring} to improve similarity and naturalness of speech for unseen speakers~\cite{snyder2018x}.
-The authors also showed that a gender-dependent model improves the similarity for unseen speakers~\cite{cooper2020zero}.
-In this context, Attentron~\cite{choi2020attentron} proposed a fine-grained encoder with an attention mechanism for extracting detailed styles from various reference samples and a coarse-grained encoder.
+ZS-TTS using deep learning was first proposed by [^05] which extended the **DeepVoice3** method[^06].
+Meanwhile, **Tacotron2**[^07] was adapted using external speaker embeddings extracted from a trained speaker encoder using a generalized end-to-end loss (GE2E)[^08], allowing for speech generation that resembles the target speaker[^01].
+Similarly, **Tacotron2** was used with a different speaker embeddings methods[^02], with LDE embeddings[^09] to improve similarity and naturalness of speech for unseen speakers[^10].
+The authors also showed that a gender-dependent model improves the similarity for unseen speakers[^02].
+In this context, Attentron[^03] proposed a fine-grained encoder with an attention mechanism for extracting detailed styles from various reference samples and a coarse-grained encoder.
 As a result of using several reference samples, they achieved better voice similarity for unseen speakers.
-ZSM-SS \cite{kumar21c_interspeech} is a Transformer-based architecture with a normalization architecture and an external speaker encoder based on Wav2vec 2.0 \cite{baevski2020wav2vec}.
+ZSM-SS [^11] is a Transformer-based architecture with a normalization architecture and an external speaker encoder based on Wav2vec 2.0 [^12].
 The authors conditioned the normalization architecture with speaker embeddings, pitch, and energy.
 Despite promising results, the authors did not compare the proposed model with any of the related works mentioned above.
-SC-GlowTTS~\cite{casanova2021sc} was the first application of flow-based models in ZS-TTS.
+**SC-GlowTTS**[^04] was the first application of flow-based models in ZS-TTS.
 It improved voice similarity for unseen speakers in training with respect to previous studies while maintaining comparable quality.
 
 Despite these advances, the similarity gap between observed and unobserved speakers during training is still an open research question.
 ZS-TTS models still require a considerable amount of speakers for training, making it difficult to obtain high-quality models in low-resource languages.
-Furthermore, according to \cite{tan2021survey}, the quality of current ZS-TTS models is not sufficiently good, especially for target speakers with speech characteristics that differ from those seen in training.
-Although SC-GlowTTS~\cite{casanova2021sc} achieved promising results with only 11 speakers from the VCTK dataset \cite{veaux2016superseded}, when one limits the number and variety of training speakers, it also further hinders the model generalization for unseen voices.
+Furthermore, according to [^13], the quality of current ZS-TTS models is not sufficiently good, especially for target speakers with speech characteristics that differ from those seen in training.
+Although **SC-GlowTTS**[^04] achieved promising results with only 11 speakers from the VCTK dataset [^14], when one limits the number and variety of training speakers, it also further hinders the model generalization for unseen voices.
 
-In parallel with the ZS-TTS, multilingual TTS has also evolved aiming at learning models for multiple languages at the same time~ \cite{cao2019end,zhang2019learning,nekvinda2020one,li2021light}.
-Some of these models are particularly interesting as they allow for code-switching, i.e., changing the target language for some part of a sentence, while keeping the same voice \cite{nekvinda2020one}.
+In parallel with the ZS-TTS, multilingual TTS has also evolved aiming at learning models for multiple languages at the same time~ [^15], [^16], [^17], [^18].
+Some of these models are particularly interesting as they allow for code-switching, i.e., changing the target language for some part of a sentence, while keeping the same voice [^17].
 This can be useful in ZS-TTS as it allows using of speakers from one language to be synthesized in another language.
 
 In this paper, we propose ***YourTTS*** with several novel ideas focused on zero-shot multi-speaker and multilingual training.
@@ -101,32 +100,32 @@ For reproducibility, our source-code is available at the [Coqui TTS [Github]](ht
 
 <table><tr><td width="50%">
 
-***YourTTS*** builds upon VITS \cite{kim2021conditional}, but includes several novel modifications for zero-shot multi-speaker and multilingual training.
-First, unlike previous work \cite{casanova2021sc, kim2021conditional}, in our model we used raw text as input instead of phonemes.
+***YourTTS*** builds upon **VITS**[^19], but includes several novel modifications for zero-shot multi-speaker and multilingual training.
+First, unlike previous work (**SC-GlowTTS**[^04], **VITS**[^19]), in our model we used raw text as input instead of phonemes.
 This allows more realistic results for languages without good open-source grapheme-to-phoneme converters available.
 
-As in previous works, e.g.~\cite{kim2021conditional}, we use a transformer-based text encoder \cite{kim2020glow, casanova2021sc}.
+As in previous works, e.g., **VITS**[^19], we use a transformer-based text encoder (**Glow-TTS**[^20], **SC-GlowTTS**[^04]).
 However, for multilingual training, we concatenate 4-dimensional trainable language embeddings into the embeddings of each input character.
 In addition, we also increased the number of transformer blocks to 10 and the number of hidden channels to 196.
-As a decoder, we use a stack of 4 affine coupling layers \cite{dinh2016density} each layer is itself a stack of 4 WaveNet residual blocks \cite{oord2016wavenet}, as in VITS model.
+As a decoder, we use a stack of 4 affine coupling layers [^21] each layer is itself a stack of 4 **WaveNet** residual blocks[^22], as in **VITS** model.
 
-As a vocoder we use the HiFi-GAN \cite{kong2020hifi} version 1 with the discriminator modifications introduced by \cite{kim2021conditional}.
-Furthermore, for efficient end2end training, we connect the TTS model with the vocoder using a variational autoencoder (VAE) \cite{kingma2013auto}.
-For this, we use the Posterior Encoder proposed by \cite{kim2021conditional}.
-The Posterior Encoder consists of 16 non-causal WaveNet residual blocks \cite{prenger2019waveglow, kim2020glow}.
+As a vocoder we use the HiFi-GAN [^23] version 1 with the discriminator modifications introduced by **VITS**[^19].
+Furthermore, for efficient end2end training, we connect the TTS model with the vocoder using a variational autoencoder (VAE) [^24].
+For this, we use the Posterior Encoder proposed by **VITS**[^19].
+The Posterior Encoder consists of 16 non-causal WaveNet residual blocks [^25], **Glow-TTS**[^20].
 As input, the Posterior Encoder receives a linear spectrogram and predicts a latent variable, this latent variable is used as input for the vocoder and for the flow-based decoder, thus, no intermediate representation (such as mel-spectrograms) is necessary.
-This allows the model to learn an intermediate representation; hence, it achieves superior results to a two-stage approach system in which the vocoder and the TTS model are trained separately \cite{kim2021conditional}.
-Furthermore, to enable our model to synthesize speech with diverse rhythms from the input text, we use the stochastic duration predictor proposed in \cite{kim2021conditional}.
+This allows the model to learn an intermediate representation; hence, it achieves superior results to a two-stage approach system in which the vocoder and the TTS model are trained separately (**VITS**[^19]).
+Furthermore, to enable our model to synthesize speech with diverse rhythms from the input text, we use the stochastic duration predictor proposed in **VITS**[^19].
 
 ***YourTTS*** during training and inference is illustrated in Figure~\ref{fig:generaltop}, where `++` indicates concatenation, red connections mean no gradient will be propagated by this connection, and dashed connections are optional.
 We omit the Hifi-GAN discriminator networks for simplicity.
 
 To give the model zero-shot multi-speaker generation capabilities we condition all affine coupling layers of the flow-based decoder, the posterior encoder, and the vocoder on external speaker embeddings.
-We use global conditioning \cite{oord2016wavenet} in the residual blocks of the coupling layers as well as in the posterior encoder.
+We use global conditioning (**WaveNet**[^22]) in the residual blocks of the coupling layers as well as in the posterior encoder.
 We also sum the external speaker embeddings with the text encoder output and the decoder output before we pass them to the duration predictor and the vocoder, respectively.
 We use linear projection layers to match the dimensions before element-wise summations (see Figure \ref{fig:generaltop}).
 
-Also, inspired by \cite{xin21_interspeech}, we investigated Speaker Consistency Loss (SCL) in the final loss.
+Also, inspired by [^26], we investigated Speaker Consistency Loss (SCL) in the final loss.
 In this case, a pre-trained speaker encoder is used to extract speaker embeddings from the generated audio and ground truth on which we maximize the cosine similarity.
 Formally, let $\phi(.)$ be a function outputting the embedding of a speaker, $cos\_sim$ be the cosine similarity function, $\alpha$ a positive real number that controls the influence of the SCL in the final loss, and $n$ the batch size, the SCL is defined as follows:
 
@@ -138,9 +137,9 @@ where $g$ and $h$ represent, respectively, the ground truth and the generated sp
 
 During training, the Posterior Encoder receives linear spectrograms and speaker embeddings as input and predicts a latent variable $z$.
 This latent variable and speaker embeddings are used as input to the GAN-based vocoder generator which generates the waveform.
-For efficient end-to-end vocoder training, we randomly sample constant length partial sequences from $z$ as in~\cite{kong2020hifi, binkowski2019high, ren2020fastspeech, kim2021conditional}.
+For efficient end-to-end vocoder training, we randomly sample constant length partial sequences from $z$ as in[^23], [^27], [^28], **VITS**[^19].
 The Flow-based decoder aims to condition the latent variable $z$ and speaker embeddings with respect to a $P_{Zp}$ prior distribution.
-To align the $P_{Zp}$ distribution with the output of the text encoder, we use the Monotonic Alignment Search (MAS)~\cite{kim2020glow, kim2021conditional}.
+To align the $P_{Zp}$ distribution with the output of the text encoder, we use the **Monotonic Alignment Search (MAS)** (**Glow-TTS**[^20], **VITS**[^19]).
 The stochastic duration predictor receives as input speaker embeddings, language embeddings and the duration obtained through MAS.
 To generate human-like rhythms of speech, the objective of the stochastic duration predictor is a variational lower bound of the log-likelihood of the phoneme (pseudo-phoneme in our case) duration.
 
@@ -159,10 +158,10 @@ The inverted Flow-based decoder receives as input the latent variable $z_p$ and 
 
 <table><tr><td width="50%">
 
-As speaker encoder, we use the H/ASP model \cite{heo2020clova} publicly available, that was trained with the Prototypical Angular \cite{chung2020in} plus Softmax loss functions in the VoxCeleb 2 \cite{chung2018voxceleb2} dataset.
-This model was chosen for achieving state-of-the-art results in VoxCeleb 1 \cite{nagrani2017voxceleb} test subset.
-In addition, we evaluated the model in the test subset of Multilingual LibriSpeech (MLS) \cite{PratapXSSC20} using all languages.
-This model reached an average Equal Error Rate (EER) of 1.967 while the speaker encoder used in the SC-GlowTTS paper \cite{casanova2021sc} reached an EER of 5.244.
+As speaker encoder, we use the H/ASP model [^29] publicly available, that was trained with the Prototypical Angular [^30] plus Softmax loss functions in the VoxCeleb 2 [^31] dataset.
+This model was chosen for achieving state-of-the-art results in VoxCeleb 1 [^32] test subset.
+In addition, we evaluated the model in the test subset of Multilingual LibriSpeech (MLS) [^33] using all languages.
+This model reached an average Equal Error Rate (EER) of 1.967 while the speaker encoder used in the **SC-GlowTTS** paper[^04] reached an EER of 5.244.
 
 </td><td>
 
@@ -184,10 +183,10 @@ Additionally, we normalized all audio to -27dB using the RMS-based normalization
 
 **English**
 
-VCTK \cite{veaux2016superseded} dataset, which contains 44 hours of speech and 109 speakers, sampled at 48KHz.
+VCTK [^14] dataset, which contains 44 hours of speech and 109 speakers, sampled at 48KHz.
 We divided the VCTK dataset into: train, development (containing the same speakers as the train set) and test.
-For the test set, we selected 11 speakers that are neither in the development nor the training set; following the proposal by \cite{jia2018transfer} and \cite{casanova2021sc}, we selected 1 representative from each accent totaling 7 women and 4 men (speakers 225, 234, 238, 245, 248, 261, 294, 302, 326, 335 and 347).
-Furthermore, in some experiments we used the subsets \textit{train-clean-100} and \textit{train-clean-360} of the LibriTTS dataset \cite{zen2019libritts} seeking to increase the number of speakers in the training of the models.
+For the test set, we selected 11 speakers that are neither in the development nor the training set; following the proposal by [^01] and **SC-GlowTTS**[^04], we selected 1 representative from each accent totaling 7 women and 4 men (speakers 225, 234, 238, 245, 248, 261, 294, 302, 326, 335 and 347).
+Furthermore, in some experiments we used the subsets \textit{train-clean-100} and \textit{train-clean-360} of the LibriTTS dataset [^34] seeking to increase the number of speakers in the training of the models.
 
 </td><td>
 
@@ -196,9 +195,9 @@ Furthermore, in some experiments we used the subsets \textit{train-clean-100} an
 
 **Portuguese**
 
-TTS-Portuguese Corpus \cite{casanova2020ttsportuguese}, a single-speaker dataset of the Brazilian Portuguese language with around 10 hours of speech, sampled at 48KHz.
+TTS-Portuguese Corpus [^35], a single-speaker dataset of the Brazilian Portuguese language with around 10 hours of speech, sampled at 48KHz.
 As the authors did not use a studio, the dataset contains ambient noise.
-We used the FullSubNet model \cite{Hao_2021} as denoiser and resampled the data to 16KHz.
+We used the FullSubNet model [^36] as denoiser and resampled the data to 16KHz.
 For development we randomly selected 500 samples and the rest of the dataset was used for training.
 
 </td><td>
@@ -208,7 +207,7 @@ For development we randomly selected 500 samples and the rest of the dataset was
 
 **French**
 
-fr\_FR set of the M-AILABS dataset \cite{mailabs}, which is based on [LibriVox [URL]](https://librivox.org/).
+fr\_FR set of the M-AILABS dataset [^37], which is based on [LibriVox [URL]](https://librivox.org/).
 It consists of 2 female (104h) and 3 male speakers (71h) sampled at 16KHz.
 
 </td><td>
@@ -217,10 +216,10 @@ It consists of 2 female (104h) and 3 male speakers (71h) sampled at 16KHz.
 <tr><td>
 
 To evaluate the zero-shot multi-speaker capabilities of our model in English, we use the 11 VCTK speakers reserved for testing.
-To further test its performance outside of the VCTK domain, we select 10 speakers (5F/5M) from subset \textit{test-clean} of LibriTTS dataset \cite{zen2019libritts}.
-For Portuguese we select samples from 10 speakers (5F/5M) from the Multilingual LibriSpeech (MLS) \cite{PratapXSSC20} dataset.
+To further test its performance outside of the VCTK domain, we select 10 speakers (5F/5M) from subset \textit{test-clean} of LibriTTS dataset [^34].
+For Portuguese we select samples from 10 speakers (5F/5M) from the Multilingual LibriSpeech (MLS) [^33] dataset.
 For French, no evaluation dataset was used, due to the reasons described in Section \ref{sec:results}.
-Finally, for speaker adaptation experiments, to mimic a more realistic setting, we used 4 speakers from the Common Voice dataset \cite{ardila2020common}.
+Finally, for speaker adaptation experiments, to mimic a more realistic setting, we used 4 speakers from the Common Voice dataset [^38].
 
 </td><td>
 
@@ -242,17 +241,17 @@ We carried out four training experiments with ***YourTTS***:
 <tr><td>
 
 To accelerate training, in every experiment, we use transfer learning.
-In experiment 1, we start from a model trained 1M steps on LJSpeech \cite{ito2017lj} and continue the training for 200K steps with the VCTK dataset.
+In experiment 1, we start from a model trained 1M steps on LJSpeech [^39] and continue the training for 200K steps with the VCTK dataset.
 However, due to the proposed changes, some layers of the model were randomly initialized due to the incompatibility of the shape of the weights.
 For experiments 2 and 3, training is done by continuing from the previous experiment for approximately 140k steps, learning one language at a time.
 In addition, for each of the experiments a fine-tuning was performed for 50k steps using the Speaker Consistency Loss (SCL), described in section \ref{sec:TTSModel}, with $\alpha = 9$.
 Finally, for experiment 4, we continue training from the model from experiment 3 fine-tuned with the Speaker Consistency Loss.
-Note that, although the latest works in ZS-TTS \cite{cooper2020zero, choi2020attentron, casanova2021sc} only use the VCTK dataset, this dataset has a limited number of speakers (109) and little variety of recording conditions.
-Thus, after training with VCTK only, in general, ZS-TTS models do not generalize satisfactorily to new speakers where recording conditions or voice characteristics are very different than those seen in the training \cite{tan2021survey}.
+Note that, although the latest works in ZS-TTS [^02], [^03], **SC-GlowTTS**[^04] only use the VCTK dataset, this dataset has a limited number of speakers (109) and little variety of recording conditions.
+Thus, after training with VCTK only, in general, ZS-TTS models do not generalize satisfactorily to new speakers where recording conditions or voice characteristics are very different than those seen in the training [^13].
 
 The models were trained using an NVIDIA TESLA V100 32GB with a batch size of 64.
-For the TTS model training and for the discrimination of vocoder HiFi-GAN we use the AdamW optimizer \cite{loshchilov2017decoupled} with betas 0.8 and 0.99, weight decay 0.01 and an initial learning rate of 0.0002 decaying exponentially by a gamma of 0.999875~\cite{paszke2017automatic}.
-For the multilingual experiments, we use weighted random sampling \cite{paszke2017automatic} to guarantee a language balanced batch.
+For the TTS model training and for the discrimination of vocoder HiFi-GAN we use the AdamW optimizer [^40] with betas 0.8 and 0.99, weight decay 0.01 and an initial learning rate of 0.0002 decaying exponentially by a gamma of 0.999875[^41].
+For the multilingual experiments, we use weighted random sampling [^41] to guarantee a language balanced batch.
 
 </td><td>
 
@@ -262,11 +261,11 @@ For the multilingual experiments, we use weighted random sampling \cite{paszke20
 
 <table><tr><td width="50%">
 
-In this paper, we evaluate synthesized speech quality using a Mean Opinion Score (MOS) study, as in \cite{mos}.
-To compare the similarity between the synthesized voice and the original speaker, we calculate the Speaker Encoder Cosine Similarity (SECS) \cite{casanova2021sc} between the speaker embeddings of two audios extracted from the speaker encoder.
-It ranges from -1 to 1, and a larger value indicates a stronger similarity \cite{cooper2020zero}.
-Following previous works \cite{choi2020attentron, casanova2021sc}, we compute SECS using the speaker encoder of the Resemblyzer \cite{Jemine2019Master} package, allowing for comparison with those studies.
-We also report the Similarity MOS (Sim-MOS) following the works of \cite{jia2018transfer}, \cite{choi2020attentron}, and \cite{casanova2021sc}.
+In this paper, we evaluate synthesized speech quality using a Mean Opinion Score (MOS) study, as in [^42].
+To compare the similarity between the synthesized voice and the original speaker, we calculate the Speaker Encoder Cosine Similarity (SECS) (**SC-GlowTTS**[^04]) between the speaker embeddings of two audios extracted from the speaker encoder.
+It ranges from -1 to 1, and a larger value indicates a stronger similarity [^02].
+Following previous works [^03], **SC-GlowTTS**[^04], we compute SECS using the speaker encoder of the Resemblyzer [^43] package, allowing for comparison with those studies.
+We also report the Similarity MOS (Sim-MOS) following the works of [^01], [^03], and **SC-GlowTTS**[^04].
 
 </td><td>
 
@@ -274,7 +273,7 @@ We also report the Similarity MOS (Sim-MOS) following the works of \cite{jia2018
 <tr><td>
 
 Although the experiments involve 3 languages, due to the high cost of the MOS metrics, only two languages were used to compute such metrics: English, which has the largest number of speakers, and Portuguese, which has the smallest number.
-In addition, following the work of \cite{casanova2021sc} we present such metrics only for speakers unseen during training.
+In addition, following the work of **SC-GlowTTS**[^04] we present such metrics only for speakers unseen during training.
 MOS scores were obtained with [rigorous crowdsourcing [URL]](https://www.definedcrowd.com/evaluation-of-experience/).
 For the calculation of MOS and the Sim-MOS in the English language, we use 276 and 200 native English contributors, respectively.
 For the Portuguese language, we use 90 native Portuguese contributors for both metrics.
@@ -315,9 +314,9 @@ Another noteworthy result is that SECS for all of our experiments on the VCTK da
 This can be explained by characteristics of the VCTK dataset itself which has, for example, significant breathing sounds in most audios.
 The speaker encoder may not be able to handle these features, hereby lowering the SECS of the ground truth.
 Overall, in our best experiments with VCTK, the similarity (SECS and Sim-MOS) and quality (MOS) results are similar to the ground truth.
-Our results in terms of MOS match the ones reported by the VITS article \cite{kim2021conditional}.
+Our results in terms of MOS match the ones reported by the **VITS** article[^19].
 However, we show that with our modifications, the model manages to maintain good quality and similarity for unseen speakers.
-Finally, our best experiments achieve superior results in similarity and quality when compared to ~\cite{choi2020attentron, casanova2021sc}; therefore, achieving the SOTA in the VCTK dataset for zero-shot multi-speaker TTS.
+Finally, our best experiments achieve superior results in similarity and quality when compared to [^03], **SC-GlowTTS**[^04]; therefore, achieving the SOTA in the VCTK dataset for zero-shot multi-speaker TTS.
 
 </td><td>
 
@@ -388,17 +387,17 @@ However, it should be noted that in our tests with high-quality reference sample
 
 <table><tr><td width="50%">
 
-As in the SC-GlowTTS \cite{casanova2021sc} model, we do not provide any information about the speaker’s identity to the encoder, so the distribution predicted by the encoder is forced to be speaker independent.
+As in the **SC-GlowTTS**[^04] model, we do not provide any information about the speaker’s identity to the encoder, so the distribution predicted by the encoder is forced to be speaker independent.
 Therefore, ***YourTTS*** can convert voices using the model’s Posterior Encoder, decoder and the HiFi-GAN Generator.
 Since we conditioned ***YourTTS*** with external speaker embeddings, it enables our model to mimic the voice of unseen speakers in a zero-shot voice conversion setting.
 
-In \cite{wang2021noisevc}, the authors reported the MOS and Sim-MOS metrics for the AutoVC \cite{qian2019autovc} and NoiseVC \cite{wang2021noisevc} models for 10 VCTK speakers not seen during training.
+In [^44], the authors reported the MOS and Sim-MOS metrics for the AutoVC [^45] and NoiseVC [^44] models for 10 VCTK speakers not seen during training.
 To compare our results, we selected 8 speakers (4M/4F) from the VCTK test subset.
-Although \cite{wang2021noisevc} uses 10 speakers, due to gender balance, we were forced to use only 8 speakers.
+Although [^44] uses 10 speakers, due to gender balance, we were forced to use only 8 speakers.
 
 Furthermore, to analyze the generalization of the model for the Portuguese language, and to verify the result achieved by our model in a language where the model was trained with only one speaker, we used the 8 speakers (4M/4F) from the test subset of the MLS Portuguese dataset.
 Therefore, in both languages we use speakers not seen in the training.
-Following \cite{qian2019autovc} for a deeper analysis, we compared the transfer between male, female and mixed gender speakers individually.
+Following [^45] for a deeper analysis, we compared the transfer between male, female and mixed gender speakers individually.
 During the analysis, for each speaker, we generate a transfer in the voice of each of the other speakers, choosing the reference samples randomly, considering only samples longer than 3 seconds.
 In addition, we analyzed voice transfer between English and Portuguese speakers.
 We calculate the MOS and the Sim-MOS as described in Section \ref{sec:results}.
@@ -417,7 +416,7 @@ Samples of the zero-shot voice conversion are present in the [demo page](https:/
 
 For zero-shot voice conversion from one English-speaker to another English-speaker (en-en) our model achieved a MOS of 4.20$\pm$0.05 and a Sim-MOS of 4.07$\pm$0.06.
 
-For comparison in \cite{wang2021noisevc} the authors reported the MOS and Sim-MOS results for the AutoVC \cite{qian2019autovc} and NoiseVC \cite{wang2021noisevc} models.
+For comparison in [^44] the authors reported the MOS and Sim-MOS results for the AutoVC [^45] and NoiseVC [^44] models.
 For 10 VCTK speakers not seen during training, the AutoVC model achieved a MOS of $3.54\pm 1.08$  and a Sim-MOS of $1.91\pm 1.34$.
 
 Note: The authors presented the results in a graph without the actual figures, so the MOS scores reported here are approximations calculated considering the length in pixels of those graphs.
@@ -459,12 +458,12 @@ However, for transfers involving Portuguese, the absence of female voices in the
 <table><tr><td width="50%">
 
 The different recording conditions are a challenge for the generalization of the zero-shot multi-speaker TTS models.
-Speakers who have a voice that differs greatly from those seen in training also become a challenge \cite{tan2021survey}.
-Nevertheless, to show the potential of our model for adaptation to new speakers/recording conditions, we selected samples from 20 to 61 seconds of speech for 2 Portuguese and 2 English speakers (1M/1F) in the Common Voice \cite{ardila2020common} dataset.
+Speakers who have a voice that differs greatly from those seen in training also become a challenge [^13].
+Nevertheless, to show the potential of our model for adaptation to new speakers/recording conditions, we selected samples from 20 to 61 seconds of speech for 2 Portuguese and 2 English speakers (1M/1F) in the Common Voice [^38] dataset.
 Using these 4 speakers, we perform fine-tuning on the checkpoint from experiment 4 with Speaker Consistency Loss individually for each speaker.
 
 During fine-tuning, to ensure that multilingual synthesis is not impaired, we use all the datasets used in experiment 4.
-However, we use Weighted random sampling \cite{paszke2017automatic} to guarantee that samples from adapted speakers appear in a quarter of the batch.
+However, we use Weighted random sampling [^41] to guarantee that samples from adapted speakers appear in a quarter of the batch.
 The model is trained that way for 1500 steps.
 For evaluation, we use the same approach described in Section \ref{sec:results}.
 
@@ -501,7 +500,7 @@ Additionally, we show that for speakers who have both a voice and recording cond
 However, our model exhibits some limitations.
 For the TTS experiments in all languages, our model presents instability in the stochastic duration predictor which, for some speakers and sentences, generates unnatural durations.
 We also note that mispronunciations occur for some words, especially in Portuguese.
-Unlike \cite{casanova2020ttsportuguese, casanova2020end, kim2021conditional}, we do not use phonetic transcriptions, making our model more prone to such problems.
+Unlike [^35], [^46], **VITS**[^19], we do not use phonetic transcriptions, making our model more prone to such problems.
 For Portuguese voice conversion, the speaker's gender significantly influences the model's performance, due to the absence of female voices in training.
 For Speaker Adaptation, although our model shows good results in copying the speaker's speech characteristics using only 20 seconds of speech, more than 45 seconds of speech are more adequate to allow higher quality.
 
@@ -511,3 +510,52 @@ Furthermore, we intend to explore the application of this model for data augment
 </td><td>
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^01]: jia2018transfer
+[^02]: cooper2020zero
+[^03]: choi2020attentron
+[^04]: [SC-GlowTTS](../Flow/2021.04.02_SC-GlowTTS.md)
+[^05]: arik2018neural
+[^06]: [DeepVoice3](../Acoustic/2017.10.20_DeepVoice3.md)
+[^07]: [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)
+[^08]: ge2e
+[^09]: cai2018exploring
+[^10]: snyder2018x
+[^11]: kumar21c_interspeech
+[^12]: baevski2020wav2vec
+[^13]: [**Survey by Tan et al.(2021)**](../../Surveys/2021.06.29__Survey__A_Survey_on_Neural_Speech_Synthesis_(63P).md)
+[^14]: veaux2016superseded
+[^15]: cao2019end
+[^16]: zhang2019learning
+[^17]: nekvinda2020one
+[^18]: li2021light
+[^19]: [VITS](2021.06.11_VITS.md)
+[^20]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
+[^21]: dinh2016density
+[^22]: [WaveNet](../Vocoder/2016.09.12_WaveNet.md)
+[^23]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
+[^24]: kingma2013auto
+[^25]: prenger2019waveglow
+[^26]: xin21_interspeech
+[^27]: binkowski2019high
+[^28]: ren2020fastspeech
+[^29]: heo2020clova
+[^30]: chung2020in
+[^31]: chung2018voxceleb2
+[^32]: nagrani2017voxceleb
+[^33]: PratapXSSC20
+[^34]: zen2019libritts
+[^35]: casanova2020ttsportuguese
+[^36]: Hao_2021
+[^37]: mailabs
+[^38]: ardila2020common
+[^39]: ito2017lj
+[^40]: loshchilov2017decoupled
+[^41]: paszke2017automatic
+[^42]: mos
+[^43]: Jemine2019Master
+[^44]: wang2021noisevc
+[^45]: qian2019autovc
+[^46]: casanova2020end
